<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_value_linear_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/eightDP"
        android:layout_marginBottom="@dimen/eightDP">

        <TextView
            android:id="@+id/main_items_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/eightDP"
            android:text="@string/items_label"
            android:textAlignment="center"/>

        <ImageButton
            android:id="@+id/main_remove_item_button"
            android:src="@drawable/ic_remove_circle_outline_black_24dp"
            android:contentDescription="@string/content_description_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/main_items_label"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageButton
            android:id="@+id/main_add_item_button"
            android:src="@drawable/ic_add_circle_outline_black_24dp"
            android:contentDescription="@string/content_description_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/main_items_label"
            app:layout_constraintStart_toEndOf="@id/main_remove_item_button" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_label_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/main_value_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/eightDP">

        <LinearLayout
            android:id="@+id/main_feature_label_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/main_feature_label_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/eightDP"
                android:text="@string/feature_label_one"/>

            <TextView
                android:id="@+id/main_feature_label_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/eightDP"
                android:text="@string/feature_label_two" />

            <TextView
                android:id="@+id/main_value_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/eightDP"
                android:text="@string/value_label"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/main_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/main_feature_label_layout"
            app:layout_constraintBottom_toTopOf="@id/main_submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/eightDP"
            app:layoutManager="android.support.v7.widget.GridLayoutManager">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/main_predicted_value_result_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/main_predicted_value_result"
            app:layout_constraintHorizontal_weight="1"
            android:layout_margin="@dimen/eightDP"
            android:text="@string/predicted_value_result_hint"
            android:textAlignment="textEnd"/>

        <TextView
            android:id="@+id/main_predicted_value_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/main_predicted_value_result_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            android:layout_margin="@dimen/eightDP"
            android:hint="@string/predicted_value_hint"/>

        <Button
            android:id="@+id/main_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/main_predicted_value_result_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/eightDP"
            android:text="@string/submit_label"
            android:elevation="@dimen/fourDP"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>